chore: assets and navbar

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,16 +8,16 @@ import "./main.scss";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-scout-purple">
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.png" />
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
-    <body class="min-h-screen min-w-[100vw]">
+    <body class="min-h-screen min-w-[100vw] bg-white">
         <slot />
     </body>
 </html>
