--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -9,15 +9,15 @@
     </div>
     <div class="flex flex-1 flex-row-reverse gap-3 px-3">
         <a
-            class="cursor-pointer rounded-lg px-3 py-1 hover:bg-white hover:text-scout-purple"
+            class="cursor-pointer rounded-lg px-3 py-1 transition-colors hover:bg-white hover:text-scout-purple"
             >Volunteering</a
         >
         <a
-            class="cursor-pointer rounded-lg px-3 py-1 hover:bg-white hover:text-scout-purple"
+            class="cursor-pointer rounded-lg px-3 py-1 transition-colors hover:bg-white hover:text-scout-purple"
             >Cool Shit</a
         >
         <a
-            class="cursor-pointer rounded-lg px-3 py-1 hover:bg-white hover:text-scout-purple"
+            class="cursor-pointer rounded-lg px-3 py-1 transition-colors hover:bg-white hover:text-scout-purple"
             >Events</a
         >
     </div>
