--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,22 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
+
+import { Image } from "astro:assets";
+import funny from "../assets/light-painting-funny.webp";
 ---
 
 <Layout title="Welcome to Astro.">
     <div class="flex h-screen flex-col">
         <Navbar />
-        <div class="flex flex-1 items-center justify-center">
+        <div class="flex flex-1 flex-col items-center justify-center">
             <h1>this is where the content goes :)</h1>
+            <Image
+                height={500}
+                src={funny}
+                alt="summit logo light painting"
+                class="m-4 rounded-xl shadow-xl"
+            />
         </div>
     </div>
 </Layout>
