--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Navbar from "../components/Navbar.astro";
+import Navbar from "../components/naavbar.astro";
 
 import { Image } from "astro:assets";
 import funny from "../assets/light-painting-funny.webp";
