chore: asset creation

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import "./main.scss";
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
-    <body class="min-h-screen min-w-[100vw] bg-white">
+    <body class="min-h-screen min-w-[100vw] bg-[#f6f6e9]">
         <slot />
     </body>
 </html>
