--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,16 +7,5 @@ import funny from "../assets/light-painting-funny.webp";
 ---
 
 <Layout title="Welcome to Astro.">
-    <div class="flex h-screen flex-col">
-        <Navbar />
-        <div class="flex flex-1 flex-col items-center justify-center">
-            <h1>this is where the content goes :)</h1>
-            <Image
-                height={500}
-                src={funny}
-                alt="summit logo light painting"
-                class="m-4 rounded-xl shadow-xl"
-            />
-        </div>
-    </div>
+    <div class="flex h-screen flex-col"></div>
 </Layout>
